//==============================================================================
// Copyright (C) 2026 Kurv Cygnus                                              =
// This file is part of Crisp Sweetberry.                                      =
// Crisp Sweetberry is free software: you can redistribute it and/or modify    =
// it under the terms of the GNU Lesser General Public License as published by =
// the Free Software Foundation, either version 3 of the License.              =
//==============================================================================

//? Main build script: [[../build.gradle]]

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
}

group = mod_group_id
version = mod_version

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

base {
    archivesName = mod_id
}

neoForge {
    version = project.neo_version
    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }
    runs {
        client {
            client()
            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        // This run config launches GameTestServer and runs all registered gametests, then exits.
        // By default, the server will crash when no gametests are provided.
        // The gametest system is also enabled by default for other run configs under the /test command.
        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        data {
            data()
            // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
            // gameDirectory = project.file('run-data')
            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }
        // applies to all the run configs above
        configureEach {
            // Recommended logging data for a userdev environment
            // The markers can be added/remove as needed separated by commas.
            // "SCAN": For mods scan.
            // "REGISTRIES": For firing of registry events.
            // "REGISTRYDUMP": For getting the contents of all registries.
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }
    mods {
        "${mod_id}" { sourceSet(sourceSets.main) }
    }
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation('org.junit.jupiter:junit-jupiter')
    testRuntimeOnly('org.junit.platform:junit-platform-launcher')

    compileOnly("mezz.jei:jei-1.21.1-neoforge-api:19.25.1.332")
    runtimeOnly("mezz.jei:jei-1.21.1-neoforge:19.25.1.332")

    compileOnly("maven.modrinth:jade:15.10.5+neoforge")
    runtimeOnly("maven.modrinth:jade:15.10.5+neoforge")
    
    compileOnly(project(':i18n-api'))

    //* [[I18nProcessor]] generates files, which is OK on local device, but not Github CI environment.
    //* So we need to an arg to disable APT on CI environment.
    //* Arg is defined in [[../.github/workflows/build.yml]].
    if(!project.hasProperty('githubCI'))
        annotationProcessor(project(':i18n-processor'))
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

test {
    useJUnitPlatform()
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications { register('mavenJava', MavenPublication) { from components.java } }
    repositories { maven { url "file://${project.projectDir}/repo" } }
}

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

java {
    tasks.withType(JavaCompile).configureEach {
        options.compilerArgs.add("-Amodid=" + (project.findProperty('mod_id') ?: 'unknown'))
        options.compilerArgs.add("-Ai18nPath=" + (project.findProperty('i18n_path') ?: 'default'))
    }
}